# dspy-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dspy/: __init__.py  __metadata__.py
dspy/adapters/: base.py  chat_adapter.py  json_adapter.py
dspy/adapters/types/: base_type.py  reasoning.py  tool.py
dspy/clients/: __init__.py  base_lm.py  cache.py  embedding.py  lm.py  openai.py
dspy/dsp/: colbertv2.py
dspy/predict/: knn.py  predict.py  react.py
dspy/retrievers/: embeddings.py
dspy/streaming/: streamify.py  streaming_listener.py
dspy/teleprompt/: copro_optimizer.py  infer_rules.py  mipro_optimizer_v2.py  simba.py  utils.py
dspy/teleprompt/gepa/: gepa.py
dspy/utils/: dummies.py  exceptions.py  usage_tracker.py
tests/: conftest.py
tests/adapters/: test_baml_adapter.py  test_chat_adapter.py  test_json_adapter.py  test_xml_adapter.py
tests/clients/: test_embedding.py  test_lm.py
tests/metadata/: test_metadata.py
tests/predict/: test_chain_of_thought.py  test_predict.py  test_react.py
tests/primitives/: test_base_module.py
tests/streaming/: test_streaming.py
tests/teleprompt/: test_bootstrap_trace.py
tests/test_utils/server/: __init__.py  mock_lm_server.py
tests/utils/: test_settings.py  test_usage_tracker.py
